# url-shortener

./: Cargo.toml  Dockerfile  readme.md  schema.sql  sqlx-data.json
migrations/: 20221214002759_create-urls-table.down.sql  20221214002759_create-urls-table.up.sql
src/: lib.rs  main.rs  readme.md  redirect_url.rs  shorten_url.rs
