[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
dotenv = "0.15.0"
nanoid = "0.4.0"
serde = { version = "1.0.15", features = ["derive"] }
sqlx =  { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "uuid", "time", "offline"] }
tokio = { version = "1.23.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
